Al final este programa no tenia nada que ver, era que hay que pasar el HOST y luego | y luego el nombre de usuario. Una Locura

--- a/SimpleFTPPublish/app.config
+++ b/SimpleFTPPublish/app.config
@@ -19,6 +19,12 @@
             <setting name="Clave" serializeAs="String">
                 <value>lrt3221</value>
             </setting>
+            <setting name="EnableSsl" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="KeepAlive" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Bizcacha.App.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
