--- a/SimpleFTPPublish/Properties/Settings.settings
+++ b/SimpleFTPPublish/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="Clave" Type="System.String" Scope="User">
       <Value Profile="(Default)">lrt3221</Value>
     </Setting>
+    <Setting Name="EnableSsl" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="KeepAlive" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
