--- a/SimpleFTPPublish/SimpleFTPPublish.csproj
+++ b/SimpleFTPPublish/SimpleFTPPublish.csproj
@@ -96,6 +96,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
